# Master-Thesis

./: .clang-format  .gitignore  CMakeLists.txt  get_tbb.cmake  raytracing.code-workspace
doc/: CMakeLists.txt
doc/STCE_Report/: 1-introduction.tex  2-methology.tex  3-results.tex  4-discussion.tex  5-conclusions.tex  Makefile  compile_doc.sh  main.bbl  main.tex  presentation.pptx
src/: CMakeLists.txt  precision.cu  raytracing.cpp
src/benchmarker/: benchmarker.cpp  benchmarker.hpp
src/experiments/: CMakeLists.txt  nanovdb_precision.cu  precision.cu
src/experiments/img_sim/: generate.ipynb  img_sim.hpp  main.cpp  stdafx.hpp
src/experiments/precision/: analysis.ipynb  main.cpp  precision.cu  precision.hpp
src/experiments/precision/data/: data.csv
src/logging/: logging.cpp  logging.hpp
src/math/: math.cpp  math.hpp  math.test.cpp  rt_math.hpp
src/util/: logging.hpp
tools/: Makefile  compile_pc.sh  compile_xmg.sh  install_dependencies.sh  install_pyopenvdb.sh  install_vdb_view.sh  macros.cmake
